--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
 	"author": "alejandro garcia <agrcrobles@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
-		"react": "16.0.0",
+		"react": "16.6.1",
 		"react-dom": "^16.1.1",
-		"react-native": "0.51.0",
+		"react-native": "0.57.7",
 		"react-native-vector-icons": "^4.4.2",
 		"react-native-web": "^0.3.0-rc.4"
 	},
 	"devDependencies": {
-		"babel-jest": "21.2.0",
+		"babel-jest": "23.6.0",
 		"babel-loader": "^7.1.2",
 		"babel-plugin-react-native-web": "^0.3.0-rc.4",
-		"babel-preset-react-native": "4.0.0",
-		"flow-bin": "^0.57.0",
-		"jest-cli": "^21.2.1",
+		"flow-bin": "0.78.0",
+		"jest-cli": "23.6.0",
+		"metro-react-native-babel-preset": "0.50.0",
 		"prettier": "1.8.2",
 		"react-hot-loader": "^3.1.3",
-		"react-test-renderer": "16.1.1",
+		"react-test-renderer": "16.6.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.8.1",
 		"webpack-dev-server": "^2.9.4"
