--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
 	"license": "MIT",
 	"dependencies": {
 		"react": "16.6.1",
-		"react-dom": "^16.1.1",
+		"react-dom": "16.6.1",
 		"react-native": "0.57.7",
 		"react-native-vector-icons": "^4.4.2",
-		"react-native-web": "^0.3.0-rc.4"
+		"react-native-web": "0.8.9"
 	},
 	"devDependencies": {
 		"babel-jest": "23.6.0",
-		"babel-loader": "^7.1.2",
-		"babel-plugin-react-native-web": "^0.3.0-rc.4",
+		"babel-loader": "8.0.4",
+		"babel-plugin-react-native-web": "0.8.9",
 		"flow-bin": "0.78.0",
 		"jest-cli": "23.6.0",
 		"metro-react-native-babel-preset": "0.50.0",
@@ -34,7 +34,8 @@
 		"react-test-renderer": "16.6.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.8.1",
-		"webpack-dev-server": "^2.9.4"
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "3.1.10"
 	},
 	"jest": {
 		"preset": "react-native"
