--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 		"react-hot-loader": "^3.1.3",
 		"react-test-renderer": "16.6.1",
 		"url-loader": "^0.6.2",
-		"webpack": "^3.8.1",
+		"webpack": "^4.27.1",
 		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "3.1.10"
+		"webpack-dev-server": "^3.1.10"
 	},
 	"jest": {
 		"preset": "react-native"
