--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
 		"react-dom": "16.6.1",
 		"react-native": "0.57.7",
 		"react-native-vector-icons": "^4.4.2",
-		"react-native-web": "0.8.9"
+		"react-native-web": "0.9.9"
 	},
 	"devDependencies": {
 		"babel-jest": "23.6.0",
 		"babel-loader": "8.0.4",
-		"babel-plugin-react-native-web": "0.8.9",
+		"babel-plugin-react-native-web": "0.9.9",
 		"flow-bin": "0.78.0",
 		"jest-cli": "23.6.0",
 		"metro-react-native-babel-preset": "0.50.0",
@@ -35,7 +35,7 @@
 		"url-loader": "^0.6.2",
 		"webpack": "^4.27.1",
 		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10"
+		"webpack-dev-server": "3.1.10"
 	},
 	"jest": {
 		"preset": "react-native"
