--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"react-dom": "16.3.1",
 		"react-native": "0.57.7",
 		"react-native-markdown-view": "^1.1.4",
-		"react-native-vector-icons": "^4.4.2",
+		"react-native-vector-icons": "6.1.0",
 		"react-native-web": "0.8.9"
 	},
 	"devDependencies": {
