--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"jest-cli": "23.6.0",
 		"metro-react-native-babel-preset": "0.50.0",
 		"prettier": "1.8.2",
-		"react-hot-loader": "^3.1.3",
+		"react-hot-loader": "4.3.12",
 		"react-test-renderer": "16.3.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^4.27.1",
