--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
 	"devDependencies": {
 		"babel-jest": "23.6.0",
 		"babel-loader": "8.0.4",
-		"babel-plugin-react-native-web": "0.9.9",
+		"babel-plugin-react-native-web": "0.8.9",
 		"flow-bin": "0.78.0",
 		"jest-cli": "23.6.0",
 		"metro-react-native-babel-preset": "0.50.0",
-		"prettier": "1.8.2",
+		"prettier": "1.15.3",
 		"react-hot-loader": "4.3.12",
 		"react-test-renderer": "16.3.1",
 		"url-loader": "^0.6.2",
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2",
+		"webpack": "4.27.1",
+		"webpack-cli": "3.1.2",
 		"webpack-dev-server": "3.1.10"
 	},
 	"jest": {
